test/functions/vass/proc-iter/error-return-expr-in-iter-2.good
error-return-expr-in-iter-2.chpl:2: In iterator 'i11h':
error-return-expr-in-iter-2.chpl:4: error: 'return' statements with values are not allowed in iterators
error-return-expr-in-iter-2.chpl:2: note: 'i11h' is declared as an iterator here
error-return-expr-in-iter-2.chpl:1: note: 'i11h' is declared inside 'p11d', but returning from 'p11d' here is not allowed
